// Vitest Snapshot v1

exports[`plugins/splitChunks > should set custom config 1`] = `
{
  "optimization": {
    "splitChunks": {
      "cacheGroups": {
        "User_Force_Split_Group_0": {
          "chunks": "all",
          "enforce": true,
          "name": "User_Force_Split_Group_0",
          "test": /react/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
}
`;

exports[`plugins/splitChunks > should set single-size config 1`] = `
{
  "optimization": {
    "splitChunks": {
      "cacheGroups": {},
      "chunks": "all",
      "enforceSizeThreshold": 50000,
      "maxSize": 5000,
      "minSize": 1000,
    },
  },
}
`;

exports[`plugins/splitChunks > should set single-vendor config 1`] = `
{
  "optimization": {
    "splitChunks": {
      "cacheGroups": {},
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
}
`;

exports[`plugins/splitChunks > should set split-by-experience config 1`] = `
{
  "optimization": {
    "splitChunks": {
      "cacheGroups": {
        "Experience_Defined_Cache_Group_0": {
          "name": "Experience_Defined_Cache_Group_0",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]react\\|react-dom\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_1": {
          "name": "Experience_Defined_Cache_Group_1",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]react-router\\|react-router-dom\\|history\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_2": {
          "name": "Experience_Defined_Cache_Group_2",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]@ies\\\\/semi\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_3": {
          "name": "Experience_Defined_Cache_Group_3",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]antd\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_4": {
          "name": "Experience_Defined_Cache_Group_4",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]@arco-design\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_5": {
          "name": "Experience_Defined_Cache_Group_5",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]@douyinfe\\\\/semi\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_6": {
          "name": "Experience_Defined_Cache_Group_6",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]@babel\\\\/runtime\\|@babel\\\\/runtime-corejs2\\|@babel\\\\/runtime-corejs3\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_7": {
          "name": "Experience_Defined_Cache_Group_7",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]lodash\\|lodash-es\\[\\\\\\\\/\\]/,
        },
        "Experience_Defined_Cache_Group_8": {
          "name": "Experience_Defined_Cache_Group_8",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]core-js\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
}
`;

exports[`plugins/splitChunks > should set split-by-module config 1`] = `
{
  "optimization": {
    "splitChunks": {
      "cacheGroups": {
        "vendors": {
          "name": [Function],
          "priority": -10,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
      "maxInitialRequests": Infinity,
      "minSize": 0,
    },
  },
}
`;
